# mutualinfo

./: README.md  pyproject.toml  requirements.txt  setup.py
examples/: 01_run_experiments.ipynb  conformal_mi_example.py  demo_estimators.py  synthetic_data.py
mutualinfo/: __init__.py  utils.py
mutualinfo/estimators/: __init__.py  histogram.py  kde.py  kraskov.py
mutualinfo/uncertainty/: __init__.py  bootstrap.py  conformal.py  conformal_heur.py  kraskov_cp.py
tests/: test_conformal.py  test_estimators.py  test_uncertainty.py
